keypad: gpio key drive optimization
PD#169209: keypad: gpio key drive optimization

1.replace the old interface gpio_ with gpiod_.
2.add irq detection mode,can be configured as
 interrupt mode or polling mode through DTS.
3.add keys to eliminate jitter.
4.remove useless code.

Change-Id: I81ef3cd0061e36faa10f58932588ff5031208b25
Signed-off-by: Yingyuan Zhu <yingyuan.zhu@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/g12b_a311d_skt.dts
+++ b/arch/arm64/boot/dts/amlogic/g12b_a311d_skt.dts
@@ -281,7 +281,8 @@
 		key_num = <1>;
 		key_name = "power";
 		key_code = <116>;
-		key_pin = <&gpio_ao  GPIOAO_3  GPIO_ACTIVE_HIGH>;
+		key-gpios = <&gpio_ao  GPIOAO_3  GPIO_ACTIVE_HIGH>;
+		detect_mode = <0>;/*0:polling mode, 1:irq mode*/
 	};
 
 	adc_keypad {
