cec: modify the line check for g12a
PD#168682: cec: modify the line check for g12a

Change-Id: Id7f318caae3230df9bd6689f566524e05fd512bd
Signed-off-by: hongmin hua <hongmin.hua@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesong12a.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesong12a.dtsi
@@ -1103,7 +1103,9 @@
 		pinctrl-1=<&eecec_b>;
 		pinctrl-2=<&eecec_b>;
 		reg = <0x0 0xFF80023c 0x0 0x4
-		       0x0 0xFF800000 0x0 0x400>;
+		       0x0 0xFF800000 0x0 0x400
+		       0x0 0xFF634400 0x0 0x26>;
+		reg-names = "ao_exit","ao","periphs";
 	};
 
 	/*if you want to use vdin just modify status to "ok"*/
