--- a/arch/arm64/boot/dts/amlogic/mesontxl.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesontxl.dtsi
@@ -826,6 +826,7 @@
 		       0x0 0xc8100000 0x0 0x200
 		       0x0 0xda83e000 0x0 0x10
 		       0x0 0xc883c000 0x0 0x400>;
+		reg-names = "ao_exit","ao","hdmirx","hhi";
 	};
 
 	canvas: canvas{
