lcd: mute: wait vsync for display shadow [2/2]
PD#170101: lcd: mute: wait vsync for display shadow

Change-Id: If17838c40d46fd6f4b943d313456738fec50185a
Signed-off-by: Evoke Zhang <evoke.zhang@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesongxl_p212-panel.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesongxl_p212-panel.dtsi
@@ -28,6 +28,8 @@
 		 * "vencl_int_gate";
 		 */
 		reg = <0x0 0xc8834400 0x0 0x100>;
+		interrupts = <0 3 1>;
+		interrupt-names = "vsync";
 		pinctrl_version = <1>; /* for uboot */
 
 		/* power type:
