--- a/arch/arm64/boot/dts/amlogic/mesonaxg_s400-panel.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesonaxg_s400-panel.dtsi
@@ -32,8 +32,10 @@
 			"dsi_meas",
 			"mipi_enable_gate",
 			"mipi_bandgap_gate";
-		reg = <0x0 0xffd06000 0x0 0x400
-			   0x0 0xff640000 0x0 0x100>;
+		reg = <0x0 0xffd06000 0x0 0x400    /* dsi_host */
+			0x0 0xff640000 0x0 0x100>; /* dsi_phy */
+		interrupts = <0 3 1>;
+		interrupt-names = "vsync";
 		pinctrl_version = <1>; /* for uboot */
 
 		/* power type:
