--- a/arch/arm64/boot/dts/amlogic/mesong12a_skt-panel.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesong12a_skt-panel.dtsi
@@ -32,8 +32,10 @@
 			"dsi_meas",
 			"encl_top_gate",
 			"encl_int_gate";
-		reg = <0x0 0xffd07000 0x0 0x400     /* dsi_host */
-			0x0 0xff644000 0x0 0x2000>; /* dsi_phy */
+		reg = <0x0 0xffd07000 0x0 0x400    /* dsi_host */
+			0x0 0xff644000 0x0 0x200>; /* dsi_phy */
+		interrupts = <0 3 1>;
+		interrupt-names = "vsync";
 		pinctrl_version = <2>; /* for uboot */
 
 		/* power type:
