--- a/arch/arm64/configs/meson64_defconfig
+++ b/arch/arm64/configs/meson64_defconfig
@@ -476,6 +476,7 @@ CONFIG_AMLOGIC_SND_SOC_SSM3525=y
 CONFIG_AMLOGIC_SND_SOC_SSM3515=y
 CONFIG_AMLOGIC_SND_SOC_TAS575X=y
 CONFIG_AMLOGIC_SND_SOC_AD82584F=y
+CONFIG_AMLOGIC_SND_SOC_CS42528=y
 CONFIG_AMLOGIC_SND_SOC=y
 CONFIG_AMLOGIC_SND_SOC_MESON=y
 CONFIG_AMLOGIC_SND_SOC_AUGE=y
