--- a/arch/arm64/boot/dts/amlogic/txl_t950_p341.dts
+++ b/arch/arm64/boot/dts/amlogic/txl_t950_p341.dts
@@ -374,12 +374,24 @@
 		cm_en = <1>;/*1:enabel ;0:disable*/
 	};
 
+	tuner: tuner {
+		status = "okay";
+		tuner_name = "r842_tuner";
+		tuner_i2c_adap = <&i2c1>;
+		tuner_i2c_addr = <0xf6>;
+		tuner_xtal = <3>;
+					/* NO_SHARE_XTAL(0)
+					 * MASTER_TO_SLAVE_XTAL_IN(1)
+					 * MASTER_TO_SLAVE_XTAL_OUT(2)
+					 * SLAVE_XTAL_OUT(3)
+					 */
+		tuner_xtal_cap = <0>; /* 0 ~ 41 (pf) */
+	};
+
 	atv-demod {
 		compatible = "amlogic, atv-demod";
 		status = "okay";
-		tuner = "r842_tuner";
-		tuner_i2c_ada_id = <&i2c1>;
-		tuner_i2c_addr = <0xf6>;
+		tuner = <&tuner>;
 		btsc_sap_mode = <1>;
 		pinctrl-names = "atvdemod_agc_pins";
 		pinctrl-0 = <&atvdemod_agc_pins>;
@@ -621,9 +633,7 @@
 		dev_name = "dvb";
 		status = "okay";
 		fe0_mode = "internal";
-		fe0_tuner = "r842_tuner";
-		fe0_i2c_adap_id = <&i2c1>;
-		fe0_tuner_i2c_addr = <0xf6>;
+		fe0_tuner = <&tuner>;
 
 		/*"parallel","serial","disable"*/
 		ts2 = "parallel";
