arm64: dts: txl: audio: re-map spk and dac mask
PD#170319: arm64: dts: txl: audio: re-map spk and dac mask

Change-Id: I47da64823dfa90460abf2327cd2e628320ef8ab1
Signed-off-by: Xing Wang <xing.wang@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/txl_t950_p341.dts
+++ b/arch/arm64/boot/dts/amlogic/txl_t950_p341.dts
@@ -930,7 +930,7 @@
 		};
 		Channel_Mask {
 			/*i2s has 4 pins, 8channel, mux output*/
-			Speaker0_Channel_Mask = "i2s_2/3";
+			DAC0_Channel_Mask = "i2s_2/3";
 		};
 	};
 
