arm64: dts: txl: add decoder support
PD#170321: arm64: dts: txl: add decoder support

add ionvideo devicetree node

Change-Id: I5b628d86a64ff7920546e8122895cc048d8fc039
Signed-off-by: Conglin Guo <conglin.guo@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/txl_t950_p341.dts
+++ b/arch/arm64/boot/dts/amlogic/txl_t950_p341.dts
@@ -252,6 +252,12 @@
 		nr10bit-support = <1>;
 	};
 
+	ionvideo {
+		compatible = "amlogic, ionvideo";
+		dev_name = "ionvideo";
+		status = "okay";
+	};
+
 	hdmirx {
 		compatible = "amlogic, hdmirx-txl";
 		status = "okay";
