input: avin_detect: add avin detect driver
PD#170716: input: avin_detect: add avin detect driver

porting from the Linux-3.14

Change-Id: Id0566a62be7d587ca6368b3d29f3887bab1f6d87
Signed-off-by: Xingyu Chen <xingyu.chen@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/txl_t950_p341.dts
+++ b/arch/arm64/boot/dts/amlogic/txl_t950_p341.dts
@@ -203,6 +203,17 @@
 		key_tolerance = <40 40 40 40 40 40 40>;
 	};
 
+	avin_detect {
+		compatible = "amlogic, avin_detect";
+		status = "okay";
+		avin_device_num = <2>;
+		gpios = <&gpio  GPIODV_8  GPIO_ACTIVE_HIGH>,
+			<&gpio  GPIODV_6  GPIO_ACTIVE_HIGH>;
+		detect_interval_length = <100>;
+		set_detect_times = <5>;
+		set_fault_tolerance = <1>;
+	};
+
 	picdec {
 		compatible = "amlogic, picdec";
 		status = "okay";
