--- a/drivers/amlogic/input/Makefile
+++ b/drivers/amlogic/input/Makefile
@@ -4,6 +4,8 @@
 
 # Each configuration option enables a list of files.
 
+obj-$(CONFIG_AMLOGIC_AVIN_DETECT) += avin_detect/
+
 obj-$(CONFIG_AMLOGIC_INPUT_KEYBOARD) += keyboard/
 
 obj-$(CONFIG_AMLOGIC_REMOTE) += remote/
