--- a/drivers/amlogic/input/Kconfig
+++ b/drivers/amlogic/input/Kconfig
@@ -10,6 +10,8 @@ menuconfig AMLOGIC_INPUT
 
 if AMLOGIC_INPUT
 
+source "drivers/amlogic/input/avin_detect/Kconfig"
+
 source "drivers/amlogic/input/keyboard/Kconfig"
 
 source "drivers/amlogic/input/remote/Kconfig"
