audio: fail to play DD and DTS files
PD#170383: add audio_data in p321.dts

Change-Id: I0763daf316821ceed179205e7adbd7b89e5a2185
Signed-off-by: weijia.zhu <weijia.zhu@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesontxl.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesontxl.dtsi
@@ -973,6 +973,12 @@
 		/*1920*1080*4*3 = 0x17BB000*/
 	};
 
+	audio_data: audio_data {
+		compatible = "amlogic, audio_data";
+		query_licence_cmd = <0x82000050>;
+		status = "disabled";
+	};
+
 	efuse: efuse {
 		compatible = "amlogic, efuse";
 		read_cmd = <0x82000030>;
