--- a/arch/arm64/configs/meson64_smarthome_defconfig
+++ b/arch/arm64/configs/meson64_smarthome_defconfig
@@ -190,6 +190,8 @@ CONFIG_MAC80211=y
 CONFIG_RFKILL=y
 CONFIG_AMLOGIC_DRIVER=y
 CONFIG_AMLOGIC_MODIFY=y
+CONFIG_AMLOGIC_CPUFREQ=y
+CONFIG_AMLOGIC_MESON_CPUFREQ=y
 CONFIG_AMLOGIC_UART=y
 CONFIG_AMLOGIC_SERIAL_MESON_CONSOLE=y
 CONFIG_AMLOGIC_IOMAP=y
