--- a/arch/arm64/boot/dts/amlogic/mesontxl.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesontxl.dtsi
@@ -60,6 +60,7 @@
 			enable-method = "psci";
 			clocks = <&scpi_dvfs 0>;
 			clock-names = "cpu-cluster.0";
+			cpu-idle-states = <&SYSTEM_SLEEP_0>;
 		};
 
 		CPU1:cpu@1 {
@@ -69,6 +70,7 @@
 			enable-method = "psci";
 			clocks = <&scpi_dvfs 0>;
 			clock-names = "cpu-cluster.0";
+			cpu-idle-states = <&SYSTEM_SLEEP_0>;
 		};
 
 		CPU2:cpu@2 {
@@ -78,6 +80,7 @@
 			enable-method = "psci";
 			clocks = <&scpi_dvfs 0>;
 			clock-names = "cpu-cluster.0";
+			cpu-idle-states = <&SYSTEM_SLEEP_0>;
 		};
 
 		CPU3:cpu@3 {
@@ -87,6 +90,31 @@
 			enable-method = "psci";
 			clocks = <&scpi_dvfs 0>;
 			clock-names = "cpu-cluster.0";
+			cpu-idle-states = <&SYSTEM_SLEEP_0>;
+		};
+
+		idle-states {
+			entry-method = "arm,psci";
+/*
+			CPU_SLEEP_0: cpu-sleep-0 {
+				compatible = "arm,idle-state";
+				arm,psci-suspend-param = <0x0010000>;
+				local-timer-stop;
+				entry-latency-us = <3000>;
+				exit-latency-us = <3000>;
+				min-residency-us = <8000>;
+			};
+*/
+
+			SYSTEM_SLEEP_0: system-sleep-0 {
+				compatible = "arm,idle-state";
+				arm,psci-suspend-param = <0x0010000>;
+				local-timer-stop;
+				entry-latency-us = <0x3fffffff>;
+				exit-latency-us = <0x40000000>;
+				min-residency-us = <0xffffffff>;
+			};
+
 		};
 	};
 
