--- a/arch/arm64/boot/dts/freescale/imx8mq-nitrogen8m.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mq-nitrogen8m.dts
@@ -187,7 +187,7 @@
 		>;
 	};
 
-	pinctrl_i2c4_touch: i2c4-touchgrp {
+	pinctrl_i2c4_gt911: i2c4-gt911grp {
 		fsl,pins = <
 #define GPIRQ_GT911 		<&gpio3 12 IRQ_TYPE_LEVEL_HIGH>
 #define GP_GT911_IRQ 		<&gpio3 12 GPIO_ACTIVE_HIGH>
@@ -206,7 +206,7 @@
 		>;
 	};
 
-	pinctrl_i2c4_sn65dsi83: i2c4-sn65dsi83 {
+	pinctrl_i2c4_sn65dsi83: i2c4-sn65dsi83grp {
 		fsl,pins = <
 #define GPIRQ_I2C4_SN65DSI83	<&gpio1 1 IRQ_TYPE_LEVEL_HIGH>
 			MX8MQ_IOMUXC_GPIO1_IO01_GPIO1_IO1	0x04
@@ -215,7 +215,7 @@
 		>;
 	};
 
-	pinctrl_mipi_panel_ltk08: mipi-panel-ltk08grp {
+	pinctrl_ltk080a60a004t: ltk080a60a004tgrp {
 		fsl,pins = <
 #define GP_LTK08_MIPI_EN	<&gpio1 1 GPIO_ACTIVE_HIGH>
 			MX8MQ_IOMUXC_GPIO1_IO01_GPIO1_IO1	0x16
@@ -465,22 +465,29 @@
 	compatible = "boundary,imx8mq-nitrogen8m", "fsl,imx8mq";
 
 	aliases {
-		backlight_mipi_dsi = &backlight_mipi_dsi;
+		backlight_mipi = &backlight_mipi;
 		dcss = &dcss;
-		dcss_disp0 = &dcss_disp0_hdmi;
-		fb_mipi_dsi = &fb_mipi_dsi;
-		fb_dcss = &fb_dcss;
-		hdmi = &hdmi;
+		fb_mipi = &fb_mipi;
+		fb_hdmi = &hdmi;
+		gpio1 = &gpio1;
 		lcdif = &lcdif;
+		mipi_cmds_ltk080a60a004t = &mipi_cmds_ltk080a60a004t;
 		mipi_dsi = &mipi_dsi;
 		mipi_dsi_bridge = &mipi_dsi_bridge;
 		mipi_dsi_phy = &mipi_dsi_phy;
 		mipi_to_lvds = &mipi_to_lvds;
-		pwm_mipi_dsi = &pwm1;
+		pinctrl_ltk080a60a004t = &pinctrl_ltk080a60a004t;
+		pwm_mipi = &pwm1;
 		sound_hdmi = &sound_hdmi;
+		t_mipi = &t_mipi;
 	};
 
-	backlight_mipi_dsi: backlight-mipi-dsi {
+	alias_create_phandles {
+		p1 = <&mipi_cmds_ltk080a60a004t>;
+		p2 = <&pinctrl_ltk080a60a004t>;
+	};
+
+	backlight_mipi: backlight-mipi {
 		brightness-levels = <0 1 2 3 4 5 6 7 8 9 10>;
 		compatible = "pwm-backlight";
 		default-brightness-level = <8>;
@@ -882,7 +889,7 @@
 	touchscreen@14 {
 		compatible = "goodix,gt9271";
 		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_i2c4_touch>;
+		pinctrl-0 = <&pinctrl_i2c4_gt911>;
 		reg = <0x14>;
 		esd-recovery-timeout-ms = <2000>;
 		interrupts-extended = GPIRQ_GT911;
@@ -903,7 +910,7 @@
 		clock-names = "mipi_clk";
 		compatible = "ti,sn65dsi83";
 		display = <&lcdif>;
-		display-dsi = <&fb_mipi_dsi>;
+		display-dsi = <&fb_mipi>;
 		enable-gpios = GP_I2C4_SN65DSI83_EN;
 		interrupts-extended = GPIRQ_I2C4_SN65DSI83;
 		pinctrl-names = "default";
@@ -1000,7 +1007,7 @@
 &mipi_dsi_bridge {
 	status = "disabled";
 
-	fb_mipi_dsi: panel@0 {
+	fb_mipi: panel@0 {
 		bits-per-color = <8>;
 		bridge-de-active = <0>;
 		bridge-sync-active = <1>;
@@ -1018,7 +1025,7 @@
 		spwg;
 
 		display-timings {
-			t_dsi: t-dsi-default {
+			t_mipi: t-dsi-default {
 				/* m101nwwb by default */
 				clock-frequency = <70000000>;
 				hactive = <1280>;
