mtd: spifc: add spifc support for txl
PD#171041: mtd: spifc: add spifc support for txl

Change-Id: I487161c6e85e3b232ed0c3891784b5a37f6d878c
Signed-off-by: Yi Zeng <yi.zeng@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesontxl.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesontxl.dtsi
@@ -1320,6 +1320,43 @@
 		};
 	};
 
+	spifc_cs_pin:spifc_cs_pin {
+		mux {
+			groups = "nor_cs";
+			function = "nor";
+			bias-pull-up;
+		};
+	};
+
+	spifc_pulldown: spifc_pulldown {
+		mux {
+			groups = "nor_d",
+				"nor_q",
+				"nor_c";
+			function = "nor";
+			bias-pull-down;
+		};
+	};
+
+	spifc_pullup: spifc_pullup {
+		mux {
+			groups = "nor_cs";
+			function = "nor";
+			bias-pull-up;
+		};
+	};
+
+	spifc_all_pins: spifc_all_pins {
+		mux {
+			groups =  "nor_d",
+				"nor_q",
+				"nor_c";
+			function = "nor";
+			input-enable;
+			bias-pull-down;
+		};
+	};
+
 	sd_clk_cmd_pins:sd_clk_cmd_pins{
 		mux {
 			groups = "sdcard_cmd",
