--- a/arch/arm64/boot/dts/amlogic/atom.dts
+++ b/arch/arm64/boot/dts/amlogic/atom.dts
@@ -972,7 +972,8 @@
 		cec_osd_string = "AML_TV"; /* Max Chars: 14    */
 		port_num = <4>;
 		ee_cec;
-		arc_port_mask = <0x2>;
+		output = <1>;
+		arc_port_mask = <0x8>;
 		interrupts = <0 205 1
 					0 199 1>;
 		interrupt-names = "hdmi_aocecb","hdmi_aocec";
@@ -982,6 +983,7 @@
 		pinctrl-2=<&hdmitx_aocecb>;
 		reg = <0x0 0xFF80023c 0x0 0x4
 		       0x0 0xFF800000 0x0 0x400>;
+		reg-names = "ao_exit","ao";
 	};
 
 
