--- a/arch/arm64/boot/dts/amlogic/txlx_t962e_r321.dts
+++ b/arch/arm64/boot/dts/amlogic/txlx_t962e_r321.dts
@@ -967,9 +967,10 @@
 		vendor_id = <0x000000>;
 		product_desc = "TXLX"; /* Max Chars: 16    */
 		cec_osd_string = "AML_TV"; /* Max Chars: 14    */
-		port_num = <3>;
+		port_num = <4>;
 		ee_cec;
-		arc_port_mask = <0x2>;
+		output = <1>;
+		arc_port_mask = <0x8>;
 		interrupts = <0 205 1
 					0 199 1>;
 		interrupt-names = "hdmi_aocecb","hdmi_aocec";
