amvecm: dnlp coverity fix
PD#171026: amvecm: dnlp coverity fix

1. fix dnlp coverity
2. add kernel auto make dnlp_alg.ko

Change-Id: Idafc02e95655a9970ad778820b33c044e87bb767
Signed-off-by: MingLiang Dong <mingliang.dong@amlogic.com>

--- a/drivers/amlogic/media/algorithm/Kconfig
+++ b/drivers/amlogic/media/algorithm/Kconfig
@@ -16,6 +16,7 @@ config AMLOGIC_MEDIA_ALGORITHM
 
 if AMLOGIC_MEDIA_ALGORITHM
 #source "drivers/amlogic/media/algorithm/ldim/Kconfig"
+#source "drivers/amlogic/media/algorithm/dnlp/Kconfig"
 endif
 
 endmenu
