dts:txlx_t962x_r311_720p: fix commit error[1/1]
PD#170749:dts:txlx_t962x_r311_720p: fix commit error

Change-Id: Ie2f8398fab203e752657d54c77ac5ffbe56abebc
Signed-off-by: Lei Qian <lei.qian@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/txlx_t962x_r311_720p.dts
+++ b/arch/arm64/boot/dts/amlogic/txlx_t962x_r311_720p.dts
@@ -497,6 +497,7 @@
 		clocks = <&clkc CLKID_FCLK_DIV5>,
 			<&clkc CLKID_VDIN_MEAS_COMP>;
 		clock-names = "fclk_div5", "cts_vdin_meas_clk";
+		vdin_id = <0>;
 		/* vdin write mem color depth support:
 		 * bit0:support 8bit
 		 * bit1:support 9bit
