--- a/arch/arm64/boot/dts/amlogic/atom.dts
+++ b/arch/arm64/boot/dts/amlogic/atom.dts
@@ -191,12 +191,10 @@
 	    key_num = <3>;
 	    key_name = "source", "bt_paring", "mute";
 	    key_code = <466 218 248>;
-	    key_pin = <&gpio GPIODV_0 GPIO_ACTIVE_LOW
+	    key-gpios = <&gpio GPIODV_0 GPIO_ACTIVE_LOW
 			&gpio GPIODV_1 GPIO_ACTIVE_LOW
 			&gpio_ao GPIOAO_3 GPIO_ACTIVE_LOW>;
-	    interrupts = <0 70 1
-				0 71 2>;
-	    interrupt-names = "irq_keyup", "irq_keydown";
+		detect_mode = <0>;/*0:polling mode, 1:irq mode*/
 	};
 
 	gpioleds {
