--- a/drivers/mxc/Kconfig
+++ b/drivers/mxc/Kconfig
@@ -34,6 +34,7 @@ source "drivers/mxc/mlb/Kconfig"
 source "drivers/mxc/ipu3/Kconfig"
 source "drivers/mxc/hdmi-cec/Kconfig"
 source "drivers/mxc/mipi/Kconfig"
+source "drivers/mxc/vehicle/Kconfig"
 
 endmenu
 
