MA-16394-3 [Android 10] Enable xtor driver on 5.4 kernel
Add xtor card in 8qm/8qxp dts and kernel config.

Change-Id: I13dd318194dd4c326a886d0dc4be9a1d5f264003
Signed-off-by: fang hui <hui.fang@nxp.com>

--- a/arch/arm64/boot/dts/freescale/imx8qxp-mek.dts
+++ b/arch/arm64/boot/dts/freescale/imx8qxp-mek.dts
@@ -321,6 +321,15 @@
 			"Playback", "CPU-Playback",
 			"CPU-Capture", "Capture";
 	};
+
+	sound-xtor {
+		compatible = "fsl,imx-audio-xtor";
+		model = "xtor-audio";
+		cpu-dai = <&sai0>;
+		tx-codec-slave = <1>;
+		rx-codec-slave = <1>;
+		status = "okay";
+	};
 };
 
 &cm40_i2c {
@@ -721,6 +730,17 @@
 	assigned-clock-parents = <&aud_pll_div0_lpcg 0>;
 	assigned-clock-rates = <0>, <786432000>, <49152000>, <12288000>, <49152000>;
 	fsl,txm-rxs;
+	status = "okay";
+};
+
+&sai0 {
+	assigned-clocks = <&clk IMX_SC_R_AUDIO_PLL_0 IMX_SC_PM_CLK_PLL>,
+			<&clk IMX_SC_R_AUDIO_PLL_0 IMX_SC_PM_CLK_SLV_BUS>,
+			<&clk IMX_SC_R_AUDIO_PLL_0 IMX_SC_PM_CLK_MST_BUS>,
+			<&sai0_lpcg 0>;
+	assigned-clock-rates = <786432000>, <49152000>, <12288000>, <49152000>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_sai0>;
 	status = "okay";
 };
 
@@ -1397,6 +1417,15 @@
 	pinctrl_pwm_mipi_lvds1: mipi_lvds1_pwm_grp {
 		fsl,pins = <
 			IMX8QXP_MIPI_DSI1_GPIO0_00_MIPI_DSI1_PWM0_OUT		0x00000020
+		>;
+	};
+
+	pinctrl_sai0: sai0grp {
+		fsl,pins = <
+			IMX8QXP_SAI0_RXD_ADMA_SAI0_RXD				0x06000040
+			IMX8QXP_SAI0_TXC_ADMA_SAI0_TXC				0x06000040
+			IMX8QXP_SAI0_TXFS_ADMA_SAI0_TXFS			0x06000040
+			IMX8QXP_SAI0_TXD_ADMA_SAI0_TXD				0x06000060
 		>;
 	};
 
