--- a/arch/arm64/boot/dts/freescale/imx8qm-mek.dts
+++ b/arch/arm64/boot/dts/freescale/imx8qm-mek.dts
@@ -350,6 +350,15 @@
 			"Playback", "CPU-Playback",
 			"CPU-Capture", "Capture";
 	};
+
+	sound-xtor {
+		compatible = "fsl,imx-audio-xtor";
+		model = "xtor-audio";
+		cpu-dai = <&sai0>;
+		tx-codec-slave = <1>;
+		rx-codec-slave = <1>;
+		status = "okay";
+	};
 };
 
 &adc0 {
@@ -502,6 +511,17 @@
 	assigned-clock-parents = <&aud_pll_div0_lpcg 0>;
 	assigned-clock-rates = <0>, <786432000>, <49152000>, <12288000>, <49152000>;
 	fsl,txm-rxs;
+	status = "okay";
+};
+
+&sai0 {
+	assigned-clocks = <&clk IMX_SC_R_AUDIO_PLL_0 IMX_SC_PM_CLK_PLL>,
+			<&clk IMX_SC_R_AUDIO_PLL_0 IMX_SC_PM_CLK_SLV_BUS>,
+			<&clk IMX_SC_R_AUDIO_PLL_0 IMX_SC_PM_CLK_MST_BUS>,
+			<&sai0_lpcg 0>;
+	assigned-clock-rates = <786432000>, <49152000>, <12288000>, <49152000>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_sai0>;
 	status = "okay";
 };
 
@@ -1519,6 +1539,15 @@
 	pinctrl_pcieb: pciebgrp{
 		fsl,pins = <
 			IMX8QM_PCIE_CTRL1_CLKREQ_B_LSIO_GPIO4_IO30		0x06000021
+		>;
+	};
+
+	pinctrl_sai0: sai0grp {
+		fsl,pins = <
+			IMX8QM_SPI0_CS1_AUD_SAI0_TXC				0x06000040
+			IMX8QM_SPI2_CS1_AUD_SAI0_TXFS				0x06000040
+			IMX8QM_SAI1_RXFS_AUD_SAI0_RXD				0x06000040
+			IMX8QM_SAI1_RXC_AUD_SAI0_TXD				0x06000060
 		>;
 	};
 
