MA-16436 arm64: configs: add configs required by android-base-conditional.xml
These configs are from kernel/configs/android-5.4/android-base-conditional.xml.

Below vts case can pass with CONFIG_SWP_EMULATION=y
  VtsKernelProcFileApi#testProcSysAbiSwpInstruction VtsKernelProcFileApi

Change-Id: I6206d16f0ec2cb6daca68317589300f1b1836295
Signed-off-by: Jindong <jindong.yue@nxp.com>

--- a/arch/arm64/configs/imx_v8_android_defconfig
+++ b/arch/arm64/configs/imx_v8_android_defconfig
@@ -52,6 +52,10 @@ CONFIG_XEN=y
 CONFIG_FORCE_MAX_ZONEORDER=14
 CONFIG_ARM64_SW_TTBR0_PAN=y
 CONFIG_COMPAT=y
+CONFIG_ARMV8_DEPRECATED=y
+CONFIG_SWP_EMULATION=y
+CONFIG_CP15_BARRIER_EMULATION=y
+CONFIG_SETEND_EMULATION=y
 CONFIG_RANDOMIZE_BASE=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
