--- a/arch/arm64/configs/imx_v8_android_defconfig
+++ b/arch/arm64/configs/imx_v8_android_defconfig
@@ -136,8 +136,6 @@ CONFIG_IPV6_VTI=y
 CONFIG_IPV6_SIT=m
 CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_NETFILTER=y
-CONFIG_NF_SOCKET_IPV4=y
-CONFIG_NF_SOCKET_IPV6=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_SECMARK=y
 CONFIG_NF_CONNTRACK_EVENTS=y
@@ -217,8 +215,14 @@ CONFIG_VLAN_8021Q_MVRP=y
 CONFIG_LLC2=y
 CONFIG_NET_SCHED=y
 CONFIG_NET_SCH_HTB=y
+CONFIG_NET_SCH_MULTIQ=y
+CONFIG_NET_SCH_CBS=y
+CONFIG_NET_SCH_TAPRIO=y
 CONFIG_NET_SCH_NETEM=y
+CONFIG_NET_SCH_MQPRIO=y
 CONFIG_NET_SCH_INGRESS=y
+CONFIG_NET_CLS_BASIC=y
+CONFIG_NET_CLS_TCINDEX=y
 CONFIG_NET_CLS_U32=y
 CONFIG_NET_CLS_BPF=y
 CONFIG_NET_EMATCH=y
@@ -227,6 +231,7 @@ CONFIG_NET_CLS_ACT=y
 CONFIG_TSN=y
 CONFIG_NET_SWITCHDEV=y
 CONFIG_BPF_JIT=y
+CONFIG_NET_PKTGEN=y
 CONFIG_CAN=m
 CONFIG_CAN_FLEXCAN=m
 CONFIG_BT=y
@@ -254,6 +259,9 @@ CONFIG_NL80211_TESTMODE=y
 CONFIG_CFG80211_WEXT=y
 CONFIG_MAC80211=y
 CONFIG_MAC80211_LEDS=y
+CONFIG_RFKILL=y
+CONFIG_RFKILL_INPUT=y
+CONFIG_RFKILL_GPIO=y
 CONFIG_NET_9P=y
 CONFIG_NET_9P_VIRTIO=y
 CONFIG_PCI=y
@@ -358,7 +366,6 @@ CONFIG_FEC=y
 CONFIG_FSL_DPAA2_ETH=y
 CONFIG_FSL_ENETC=y
 CONFIG_FSL_ENETC_VF=y
-CONFIG_FSL_ENETC_MDIO=y
 CONFIG_HIX5HD2_GMAC=y
 CONFIG_HNS_DSAF=y
 CONFIG_HNS_ENET=y
@@ -428,11 +435,6 @@ CONFIG_QCOM_TDLS=y
 CONFIG_QCOM_LTE_COEX=y
 CONFIG_WLAN_SYNC_TSF=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
-CONFIG_BT=y
-CONFIG_RFKILL=y
-CONFIG_RFKILL_INPUT=y
-CONFIG_RFKILL_GPIO=y
-CONFIG_MACH_IMX_BLUETOOTH_RFKILL=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_ADC=m
 CONFIG_KEYBOARD_GPIO=y
@@ -516,6 +518,7 @@ CONFIG_PINCTRL_IMX8MP=y
 CONFIG_PINCTRL_IMX8MQ=y
 CONFIG_PINCTRL_IMX8QM=y
 CONFIG_PINCTRL_IMX8QXP=y
+CONFIG_PINCTRL_IMX8DXL=y
 CONFIG_PINCTRL_S32V234=y
 CONFIG_GPIOLIB=y
 CONFIG_GPIO_SYSFS=y
@@ -550,6 +553,7 @@ CONFIG_IMX_SC_THERMAL=y
 CONFIG_DEVICE_THERMAL=y
 CONFIG_IMX8MM_THERMAL=y
 CONFIG_QORIQ_THERMAL=y
+CONFIG_TRUSTY=y
 CONFIG_WATCHDOG=y
 CONFIG_ARM_SP805_WATCHDOG=y
 CONFIG_ARM_SBSA_WATCHDOG=y
@@ -617,6 +621,7 @@ CONFIG_DRM_I2C_ADV7511=y
 CONFIG_DRM_NWL_MIPI_DSI=y
 CONFIG_DRM_CDNS_HDMI_CEC=y
 CONFIG_DRM_DW_HDMI_I2S_AUDIO=m
+CONFIG_DRM_DW_HDMI_GP_AUDIO=y
 CONFIG_DRM_ITE_IT6263=y
 CONFIG_DRM_IMX=y
 CONFIG_DRM_IMX_PARALLEL_DISPLAY=y
@@ -658,17 +663,19 @@ CONFIG_SND_SOC_IMX_WM8524=y
 CONFIG_SND_SOC_IMX_CS42888=y
 CONFIG_SND_SOC_IMX_MICFIL=y
 CONFIG_SND_SOC_IMX_RPMSG=y
+CONFIG_SND_SOC_IMX_XTOR=y
 CONFIG_SND_SOC_IMX_MQS=y
 CONFIG_SND_SOC_IMX_SPDIF=y
 CONFIG_SND_SOC_IMX_AUDMIX=y
 CONFIG_SND_SOC_IMX_PDM_MIC=y
 CONFIG_SND_SOC_IMX_DSP=y
 CONFIG_SND_SOC_IMX_CDNHDMI=y
-CONFIG_SND_SOC_IMX_XTOR=y
+CONFIG_SND_SOC_IMX_XCVR=y
 CONFIG_SND_SOC_SOF_TOPLEVEL=y
 CONFIG_SND_SOC_SOF_OF=m
 CONFIG_SND_SOC_SOF_IMX_TOPLEVEL=y
-CONFIG_SND_SOC_SOF_IMX8=m
+CONFIG_SND_SOC_SOF_IMX8_SUPPORT=m
+CONFIG_SND_SOC_SOF_IMX8M_SUPPORT=m
 CONFIG_SND_SOC_AK4613=m
 CONFIG_SND_SOC_DMIC=m
 CONFIG_SND_SOC_ES7134=m
@@ -827,6 +834,7 @@ CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
 CONFIG_LEDS_TRIGGER_PANIC=y
 CONFIG_EDAC=y
 CONFIG_EDAC_GHES=y
+CONFIG_EDAC_SYNOPSYS=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_DS1307=y
 CONFIG_RTC_DRV_MAX77686=y
@@ -916,6 +924,7 @@ CONFIG_PWM=y
 CONFIG_PWM_CROS_EC=m
 CONFIG_PWM_IMX27=y
 CONFIG_PHY_XGENE=y
+CONFIG_PHY_FSL_IMX8MP_LVDS=y
 CONFIG_PHY_MIXEL_MIPI_DPHY=y
 CONFIG_PHY_SAMSUNG_HDMI_PHY=y
 CONFIG_PHY_QCOM_USB_HS=y
@@ -962,10 +971,9 @@ CONFIG_SDCARD_FS=y
 CONFIG_JFFS2_FS=y
 CONFIG_UBIFS_FS=y
 CONFIG_SQUASHFS=y
-CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
-CONFIG_PSTORE_RAM=y
 CONFIG_PSTORE_PMSG=y
+CONFIG_PSTORE_RAM=y
 CONFIG_9P_FS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
@@ -1001,7 +1009,6 @@ CONFIG_MAGIC_SYSRQ=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_PREEMPT is not set
-CONFIG_TRUSTY=y
 CONFIG_ENABLE_DEFAULT_TRACERS=y
 CONFIG_MEMTEST=y
 CONFIG_CORESIGHT=y
