--- a/arch/arm64/configs/imx_v8_android_car2_defconfig
+++ b/arch/arm64/configs/imx_v8_android_car2_defconfig
@@ -136,8 +136,6 @@ CONFIG_IPV6_VTI=y
 CONFIG_IPV6_SIT=m
 CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_NETFILTER=y
-CONFIG_NF_SOCKET_IPV4=y
-CONFIG_NF_SOCKET_IPV6=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_SECMARK=y
 CONFIG_NF_CONNTRACK_EVENTS=y
@@ -242,6 +240,7 @@ CONFIG_BT_LEDS=y
 # CONFIG_BT_DEBUGFS is not set
 CONFIG_BT_HCIBTUSB=m
 CONFIG_BT_HCIUART=y
+CONFIG_MACH_IMX_BLUETOOTH_RFKILL=m
 CONFIG_BT_HCIUART_BCSP=y
 CONFIG_BT_HCIUART_ATH3K=y
 CONFIG_BT_HCIUART_LL=y
@@ -254,6 +253,9 @@ CONFIG_NL80211_TESTMODE=y
 CONFIG_CFG80211_WEXT=y
 CONFIG_MAC80211=y
 CONFIG_MAC80211_LEDS=y
+CONFIG_RFKILL=y
+CONFIG_RFKILL_INPUT=y
+CONFIG_RFKILL_GPIO=y
 CONFIG_NET_9P=y
 CONFIG_NET_9P_VIRTIO=y
 CONFIG_PCI=y
@@ -358,7 +360,6 @@ CONFIG_FEC=y
 CONFIG_FSL_DPAA2_ETH=y
 CONFIG_FSL_ENETC=y
 CONFIG_FSL_ENETC_VF=y
-CONFIG_FSL_ENETC_MDIO=y
 CONFIG_HIX5HD2_GMAC=y
 CONFIG_HNS_DSAF=y
 CONFIG_HNS_ENET=y
@@ -428,11 +429,6 @@ CONFIG_QCOM_TDLS=y
 CONFIG_QCOM_LTE_COEX=y
 CONFIG_WLAN_SYNC_TSF=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
-CONFIG_BT=y
-CONFIG_RFKILL=y
-CONFIG_RFKILL_INPUT=y
-CONFIG_RFKILL_GPIO=y
-CONFIG_MACH_IMX_BLUETOOTH_RFKILL=m
 CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_ADC=m
 CONFIG_KEYBOARD_GPIO=y
@@ -549,6 +545,7 @@ CONFIG_IMX_SC_THERMAL=y
 CONFIG_DEVICE_THERMAL=y
 CONFIG_IMX8MM_THERMAL=y
 CONFIG_QORIQ_THERMAL=y
+CONFIG_TRUSTY=y
 CONFIG_WATCHDOG=y
 CONFIG_ARM_SP805_WATCHDOG=y
 CONFIG_ARM_SBSA_WATCHDOG=y
@@ -655,13 +652,13 @@ CONFIG_SND_SOC_IMX_WM8524=y
 CONFIG_SND_SOC_IMX_CS42888=y
 CONFIG_SND_SOC_IMX_MICFIL=y
 CONFIG_SND_SOC_IMX_RPMSG=y
+CONFIG_SND_SOC_IMX_XTOR=y
 CONFIG_SND_SOC_IMX_MQS=y
 CONFIG_SND_SOC_IMX_SPDIF=y
 CONFIG_SND_SOC_IMX_AUDMIX=y
 CONFIG_SND_SOC_IMX_PDM_MIC=y
 CONFIG_SND_SOC_IMX_DSP=y
 CONFIG_SND_SOC_IMX_CDNHDMI=y
-CONFIG_SND_SOC_IMX_XTOR=y
 CONFIG_SND_SOC_SOF_TOPLEVEL=y
 CONFIG_SND_SOC_SOF_OF=m
 CONFIG_SND_SOC_SOF_IMX_TOPLEVEL=y
@@ -710,7 +707,6 @@ CONFIG_LOGIG940_FF=y
 CONFIG_HID_MAGICMOUSE=y
 CONFIG_HID_MICROSOFT=y
 CONFIG_HID_MONTEREY=y
-CONFIG_USB=m
 CONFIG_HID_MULTITOUCH=m
 CONFIG_HID_NTRIG=y
 CONFIG_HID_ORTEK=y
@@ -742,7 +738,7 @@ CONFIG_USB_OTG=y
 CONFIG_USB_OTG_WHITELIST=y
 CONFIG_USB_XHCI_HCD=m
 CONFIG_USB_EHCI_HCD=m
-CONFIG_USB_EHCI_HCD_PLATFORM=y
+CONFIG_USB_EHCI_HCD_PLATFORM=m
 CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_OHCI_HCD_PLATFORM=y
 CONFIG_USB_HCD_TEST_MODE=y
@@ -795,7 +791,7 @@ CONFIG_USB_G_SERIAL=m
 CONFIG_TYPEC=m
 CONFIG_TYPEC_TCPM=m
 CONFIG_TYPEC_TCPCI=m
-CONFIG_TYPEC_SWITCH_GPIO=y
+CONFIG_TYPEC_SWITCH_GPIO=m
 CONFIG_MMC=y
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_ARMMMCI=y
@@ -913,7 +909,7 @@ CONFIG_PWM_CROS_EC=m
 CONFIG_PWM_IMX27=y
 CONFIG_PHY_XGENE=y
 CONFIG_PHY_MIXEL_MIPI_DPHY=y
-CONFIG_PHY_QCOM_USB_HS=y
+CONFIG_PHY_QCOM_USB_HS=m
 CONFIG_PHY_SAMSUNG_USB2=y
 CONFIG_FSL_IMX8_DDR_PMU=m
 CONFIG_HISI_PMU=y
@@ -932,6 +928,8 @@ CONFIG_MUX_MMIO=y
 CONFIG_MXC_SIM=y
 CONFIG_MXC_EMVSIM=y
 CONFIG_MXC_MLB150=y
+CONFIG_VEHICLE_CORE=y
+CONFIG_VEHICLE_DUMMY=y
 CONFIG_EXT3_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
@@ -957,10 +955,9 @@ CONFIG_SDCARD_FS=y
 CONFIG_JFFS2_FS=y
 CONFIG_UBIFS_FS=y
 CONFIG_SQUASHFS=y
-CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
-CONFIG_PSTORE_RAM=y
 CONFIG_PSTORE_PMSG=y
+CONFIG_PSTORE_RAM=y
 CONFIG_9P_FS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
@@ -996,6 +993,5 @@ CONFIG_MAGIC_SYSRQ=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_PREEMPT is not set
-CONFIG_TRUSTY=y
 CONFIG_ENABLE_DEFAULT_TRACERS=y
 CONFIG_MEMTEST=y
