--- a/arch/arm64/boot/dts/freescale/imx8qxp-mek-ov5640-no-product-no-dynamic_partition.dts
+++ b/arch/arm64/boot/dts/freescale/imx8qxp-mek-ov5640-no-product-no-dynamic_partition.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright 2020 NXP
+ * Copyright 2019 NXP
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -12,21 +12,25 @@
  * GNU General Public License for more details.
  */
 
-#include "imx8qm-mek-rpmsg.dts"
-
-&wm8960 {
-	quick-probe;
-};
-
-&vehicle_core {
-	status = "okay";
-};
+#include "imx8qxp-mek-ov5640.dts"
 
 / {
 	firmware {
 		android {
 			fstab {
-				/delete-node/ system;
+				/delete-node/ product;
+				system {
+					compatible = "android,system";
+					/* default emmc node used for GSI */
+					dev = "/dev/block/platform/bus@5b000000/5b010000.mmc/by-name/system";
+					/* sd card node which used if androidboot.boot_device_root=mmcblk1 */
+					dev_mmcblk1 = "/dev/block/platform/bus@5b000000/5b020000.mmc/by-name/system";
+					/* emmc node which used if androidboot.boot_device_root=mmcblk0 */
+					dev_mmcblk0 = "/dev/block/platform/bus@5b000000/5b010000.mmc/by-name/system";
+					type = "ext4";
+					mnt_flags = "ro,barrier=1,inode_readahead_blks=8";
+					fsmgr_flags = "wait,slotselect,avb,avb_keys=/avb/q-gsi.avbpubkey:/avb/r-gsi.avbpubkey:/avb/s-gsi.avbpubkey";
+				};
 				vendor {
 					compatible = "android,vendor";
 					/* default emmc node used for GSI */
@@ -39,18 +43,12 @@
 					mnt_flags = "ro,barrier=1,inode_readahead_blks=8";
 					fsmgr_flags = "wait,slotselect,avb";
 				};
-				product {
-					compatible = "android,product";
-					/* default emmc node used for GSI */
-					dev = "/dev/block/platform/bus@5b000000/5b010000.mmc/by-name/product";
-					/* sd card node which used if androidboot.boot_device_root=mmcblk1 */
-					dev_mmcblk1 = "/dev/block/platform/bus@5b000000/5b020000.mmc/by-name/product";
-					/* emmc node which used if androidboot.boot_device_root=mmcblk0 */
-					dev_mmcblk0 = "/dev/block/platform/bus@5b000000/5b010000.mmc/by-name/product";
-					type = "ext4";
-					mnt_flags = "ro,barrier=1,inode_readahead_blks=8";
-					fsmgr_flags = "wait,slotselect,avb";
-				};
+			};
+			vbmeta {
+				/*we need use FirstStageMountVBootV2 if we enable avb*/
+				compatible = "android,vbmeta";
+				/*parts means the partition witch can be mount in first stage*/
+				parts = "vbmeta,dtbo,boot,system,vendor";
 			};
 		};
 	};
