MA-12525 disable /dev/port
Following Android STS case testPocBug_36604779,
need to disable the /dev/port to reduce attack
surface.

This patch also is able to fix CTS failure indirectly:
android.permission.cts.FileSystemPermissionTest#testDevPortSane

And make savedefconfig:
make ARCH=arm64 imx_v8_android_defconfig && make ARCH=arm64 savedefconfig && cp defconfig arch/arm64/configs/imx_v8_android_defconfig

Change-Id: I7ef4fe2d9cafd5e23065d1a3225cfa50594ec86f
Signed-off-by: Jindong <jindong.yue@nxp.com>

--- a/arch/arm64/configs/imx_v8_android_car2_defconfig
+++ b/arch/arm64/configs/imx_v8_android_car2_defconfig
@@ -480,6 +480,7 @@ CONFIG_IPMI_DEVICE_INTERFACE=m
 CONFIG_IPMI_SI=m
 CONFIG_TCG_TPM=y
 CONFIG_TCG_TIS_I2C_INFINEON=y
+# CONFIG_DEVPORT is not set
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_MUX=y
 CONFIG_I2C_MUX_PCA954x=y
