--- a/arch/arm64/configs/imx_v8_android_car_defconfig
+++ b/arch/arm64/configs/imx_v8_android_car_defconfig
@@ -480,6 +480,7 @@ CONFIG_IPMI_DEVICE_INTERFACE=m
 CONFIG_IPMI_SI=m
 CONFIG_TCG_TPM=y
 CONFIG_TCG_TIS_I2C_INFINEON=y
+# CONFIG_DEVPORT is not set
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_MUX=y
 CONFIG_I2C_MUX_PCA954x=y
