--- a/arch/arm64/configs/imx_v8_android_car_defconfig
+++ b/arch/arm64/configs/imx_v8_android_car_defconfig
@@ -929,6 +929,9 @@ CONFIG_MUX_MMIO=y
 CONFIG_MXC_SIM=y
 CONFIG_MXC_EMVSIM=y
 CONFIG_MXC_MLB150=y
+CONFIG_VEHICLE_CORE=y
+CONFIG_VEHICLE_RPMSG_M4=y
+CONFIG_VEHICLE_POST_INIT=y
 CONFIG_EXT3_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
