MA-19292-1 dts: Add gki specific dts for imx8mq
These new dts files remove gpc interrupt on imx8mq.
Because Google does not accept gpc interrupt code, we remove gpc interrupt.
So that we can support gki of imx8mq. And change interrupt-parent from
gpc to gic.

gpc interrupt code to fix ERR11171 on imx8mq.

Change-Id: I8752a37e62af2bfe932358f52c79db07ef3a5987
Signed-off-by: Zhipeng Wang <zhipeng.wang_1@nxp.com>

--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -276,3 +276,6 @@ dtb-$(CONFIG_ARCH_S32) += s32v234-evb.dtb \
 dtb-$(CONFIG_ARCH_MXC) += imx8qm-mek-sof-cs42888.dtb imx8qm-mek-sof-wm8960.dtb imx8qm-mek-sof.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8qm-mek-md.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8mp-evk-powersave.dtb imx8mp-evk-powersave-non-rpmsg.dtb
+
+dtb-$(CONFIG_ARCH_MXC) += imx8mq-evk-pcie1-m2-gki.dtb imx8mq-evk-lcdif-adv7535-gki.dtb \
+                          imx8mq-evk-dcss-rm67199-gki.dtb  imx8mq-evk-dcss-rm67191-gki.dtb imx8mq-evk-dual-display-gki.dtb
