--- a/arch/arm64/boot/dts/freescale/imx8mp-nitrogen8mp.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mp-nitrogen8mp.dts
@@ -875,6 +875,7 @@
 		asrc-controller = <&easrc>;
 #endif
 		audio-codec = <&wm8960>;
+		audio-cpu = <&sai3>;
 		audio-routing =
 			"Headphone Jack", "HP_L",
 			"Headphone Jack", "HP_R",
@@ -894,12 +895,9 @@
 #endif
 		codec-master;
 		compatible = "fsl,imx-audio-wm8960";
-		cpu-dai = <&sai3>;
-		/* JD2: hp detect high for headphone*/
 		hp-det = <2 0>;
-		hp-det-gpios = GP_WM8960_HP_DET;
-		/* Jack is not stuffed */
-		mic-det-gpios = GP_WM8960_MIC_DET;
+		hp-det-gpio = GP_WM8960_HP_DET;
+		mic-det-gpio = GP_WM8960_MIC_DET;
 		model = "wm8960-audio";
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_sound_wm8960>;
@@ -1356,6 +1354,8 @@
 		reg = <0x1a>;
 		clocks = <&audiomix_clk IMX8MP_CLK_AUDIOMIX_SAI3_MCLK1>;
 		clock-names = "mclk";
+		/* JD2: hp detect high for headphone*/
+		wlf,hp-cfg = <2 0 3>;
 		wlf,shared-lrclk;
 	};
 };
