MA-21072-2 firmware: imx: scu: Support building as module
Make CONFIG_IMX_SCU as tristate to support building as module, the module
name is imx-scu-firmware.ko

Replace all "#ifdef CONFIG_IMX_SCU" with "#if IS_ENABLED(CONFIG_IMX_SCU)".

Change-Id: Iea8b479b295b4e1f439e01461b9ba8acdefa0a3d
Signed-off-by: Jindong Yue <jindong.yue@nxp.com>

--- a/drivers/firmware/imx/Kconfig
+++ b/drivers/firmware/imx/Kconfig
@@ -11,7 +11,7 @@ config IMX_DSP
 	  exchange information with DSP side.
 
 config IMX_SCU
-	bool "IMX SCU Protocol driver"
+	tristate "IMX SCU Protocol driver"
 	depends on IMX_MBOX
 	select SOC_BUS
 	help
