--- a/drivers/firmware/imx/Makefile
+++ b/drivers/firmware/imx/Makefile
@@ -1,6 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0
 obj-$(CONFIG_IMX_DSP)		+= imx-dsp.o
-obj-$(CONFIG_IMX_SCU)		+= imx-scu.o misc.o imx-scu-irq.o rm.o imx-scu-soc.o seco.o
+obj-$(CONFIG_IMX_SCU)		+= imx-scu-firmware.o
+imx-scu-firmware-objs 		+= imx-scu.o misc.o imx-scu-irq.o rm.o imx-scu-soc.o seco.o
 obj-$(CONFIG_IMX_SCU_PD)	+= scu-pd.o
 obj-${CONFIG_IMX_SECO_MU}	+= seco_mu.o
 el_enclave-objs			= ele_mu.o ele_base_msg.o
