GENIO: arm64: dts: mediatek: mt8365-pumpkin: Enable VPU
This commit enables the VP6 on mt8365-pumpkin

Change-Id: I6cf7f4fc4c734c8aef0a3d63d056277ba6c1e67e
Signed-off-by: Suyash Narain <suyash.narain@mediatek.com>

--- a/arch/arm64/boot/dts/mediatek/mt8365-pumpkin.dts
+++ b/arch/arm64/boot/dts/mediatek/mt8365-pumpkin.dts
@@ -83,6 +83,12 @@
 			no-map;
 			reg = <0 0x43200000 0 0x00c00000>;
 		};
+		vpu_ram: vpu_ram@0x60000000 {
+			compatible = "shared-dma-pool";
+			reg = <0 0x60000000 0 0x04000000>;
+			no-map;
+			linux,cma-default;
+		};
 	};
 
 	ntc@0 {
@@ -795,5 +801,10 @@
 };
 
 &dsi0 {
+	status = "okay";
+};
+
+&vpu0 {
+	memory-region = <&vpu_ram>;
 	status = "okay";
 };
