MA-19260-1 soc: imx: Support building gpcv2 pm domains driver as module
There are two functions in the gpcv2.c drivers, so create a new
gpcv2-imx.c. imx_gpcv2_probe cyclically triggers imx_pgc_domain_probe
to follow imx8mq.dtsi.

Because the power-domains of pgc_pcie depend on pgc_pcie2, I changed
the order.

Change-Id: I43bd8ca2dfa6b142865bf256a23a14ac96b3408f
Signed-off-by: Zhipeng Wang <zhipeng.wang_1@nxp.com>

--- a/drivers/soc/imx/Kconfig
+++ b/drivers/soc/imx/Kconfig
@@ -2,7 +2,8 @@
 menu "i.MX SoC drivers"
 
 config IMX_GPCV2_PM_DOMAINS
-	bool "i.MX GPCv2 PM domains"
+	tristate "i.MX GPCv2 PM domains"
+	default ARCH_MXC
 	depends on ARCH_MXC || (COMPILE_TEST && OF)
 	depends on PM
 	select PM_GENERIC_DOMAINS
