--- a/arch/arm64/boot/dts/freescale/imx8mq.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx8mq.dtsi
@@ -754,10 +754,9 @@
 					 * it as a shared PCIE power
 					 * domain.
 					 */
-					pgc_pcie: power-domain@1 {
+					pgc_pcie2: power-domain@1 {
 						#power-domain-cells = <0>;
-						reg = <IMX8M_POWER_DOMAIN_PCIE1>;
-						power-domains = <&pgc_pcie2>;
+						reg = <IMX8M_POWER_DOMAIN_PCIE2>;
 					};
 
 					pgc_otg1: power-domain@2 {
@@ -819,9 +818,10 @@
 						reg = <IMX8M_POWER_DOMAIN_MIPI_CSI2>;
 					};
 
-					pgc_pcie2: power-domain@a {
+					pgc_pcie: power-domain@a {
 						#power-domain-cells = <0>;
-						reg = <IMX8M_POWER_DOMAIN_PCIE2>;
+						reg = <IMX8M_POWER_DOMAIN_PCIE1>;
+						power-domains = <&pgc_pcie2>;
 					};
 				};
 			};
