MA-21072-4 gpio: imx-scu: Supporting building as a module
Make CONFIG_GPIO_IMX_SCU as tristate to support building as
a module.

Change-Id: I4e42340f1ab70beaa39f60fd5f1cce493912d64b
Signed-off-by: Jindong Yue <jindong.yue@nxp.com>

--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -348,7 +348,8 @@ config GPIO_IMX_RPMSG
 	  This driver support i.MX7ULP RPMSG virtual GPIOs.
 
 config GPIO_IMX_SCU
-       def_bool y
+       tristate "NXP i.MX8 SCU GPIO support"
+       default y
        depends on IMX_SCU
 
 config GPIO_IOP
