MA-21101 [i.MX 93_EVK] enable SDIO-UART IW612 module for WiFi and BT
Reason: enable WiFi on i.MX93 with IW612 SDIO module
Tested: i.MX93

Change-Id: Ie669e6302d97efa076792e2094fabc28d3ebc881
Signed-off-by: yunjie <yunjie.jia@nxp.com>

--- a/arch/arm64/configs/imx_v8_android_defconfig
+++ b/arch/arm64/configs/imx_v8_android_defconfig
@@ -1054,7 +1054,7 @@ CONFIG_TYPEC_HD3SS3220=m
 CONFIG_TYPEC_SWITCH_GPIO=y
 CONFIG_MMC=y
 # CONFIG_PWRSEQ_EMMC is not set
-# CONFIG_PWRSEQ_SIMPLE is not set
+CONFIG_PWRSEQ_SIMPLE=m
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_CRYPTO=y
 CONFIG_MMC_ARMMMCI=y
